# collisional_ot

./: ColoringImages.ipynb  LICENSE  LearnSDE_OT.ipynb  MLMC_OT.ipynb  MatrixVersion_OT.ipynb  MultiMarginalExample.ipynb  README.md  collision.c  collision.h  collision_wrapper.pyx  main.c  new_OT.ipynb  pyproject.toml  setup.py  test.py
.github/workflows/: workflow.yml
examples/: CalibrationSDE-PyTorch.ipynb  CalibrationSDE.ipynb  ColoringImage.ipynb  Normal-SwissRoll-C.ipynb  Normal-SwissRoll-numpy.ipynb  Normal-SwissRoll.ipynb  ToyProblems.ipynb
lib/: collision.c  collision.h  collision_wrapper.c  collision_wrapper.pyx  main  main.c  setup.py  test.py
lib/old/: collision_wrapper.c
src/: collision.py  collision_pytorch.py  collision_wrapper.c  utility.py
src/collisional_ot/: __init__.py
src/collisional_ot/cython/: __init__.py  collision.c  collision_wrapper.c  collision_wrapper.pyx
src/collisional_ot/numpy/: __init__.py  collision_numpy.py
src/collisional_ot/pytorch/: __init__.py
test/: test_collision_numpy.py  test_collision_pytorch.py  test_setup.py  test_utility.py
testcases_paper/: FiveMarginal.ipynb  MultiMarginalExample.ipynb  RandomGaussians.ipynb  WassersteinDistanceDataSets.ipynb  five-marginal.ipynb
