[build-system]
requires = ["setuptools>=61.0", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "collisional-ot"
version = "0.1.0"
description = "Collision-based dynamics for optimal transport"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Mohsen Sadr", email = "mohsen.sadr@icloud.com" }
]
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "torch"  # if using PyTorch
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Source" = "https://github.com/mohsensadr/collisional_ot"

